--- a/inventario_fullstack/src/app/globals.css
+++ b/inventario_fullstack/src/app/globals.css
@@ -35,6 +35,10 @@ a {
   text-decoration: none;
 }
 
+.stock-zero {
+  color: red;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
